add new grocecry.service

--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,2 +1,16 @@
 <ActionBar title="Groceries"></ActionBar>
-<Label text="Hello world"></Label>
+
+<GridLayout rows="auto, *">
+
+    <GridLayout row="0" columns="*, auto" class="add-bar">
+        <TextField #groceryTextField [(ngModel)]="grocery" hint="Enter a grocery item" col="0"></TextField>
+        <img src="../images/add.png" (tap)="add()" col="1">
+    </GridLayout>
+
+    <RadListView row="1" [items]="groceryList">
+        <ng-template let-item="item">
+            <Label [text]="item.name" class="p-15"></Label>
+        </ng-template>
+    </RadListView>
+
+</GridLayout>
