--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -26,3 +26,10 @@ TextField {
     placeholder-color: #C4AFB4;
     color: black;
 }
+
+.dark {
+    background-color: #301217;
+}
+.dark TextField {
+    color:  #C4AFB4;
+}
