Fix bug when add new grocery Item

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <FlexboxLayout>
     <StackLayout class="form" [class.dark]="!isLoggingIn">
-        <img src="../images/logo.png">
+        <img src="https://art.nativescript-vue.org/NativeScript-Vue-White-Green.png">
         <TextField hint="Email Address" keyboardType="email"
                    autocorrect="false" autocapitalizationType="none"
                    [(ngModel)]="user.email" class="input input-border"></TextField>
