--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -3,9 +3,9 @@
 <GridLayout rows="auto, *">
 
     <GridLayout row="0" columns="*, auto" class="add-bar">
-        <TextField #groceryTextField hint="Enter a grocery item" col="0">
-        </TextField>
-        <img src="../images/add.png" col="1">
+        <TextField #groceryTextField [(ngModel)]="grocery" hint="Enter a grocery item" col="0"></TextField>
+        <img src="https://cdn.icon-icons.com/icons2/1993/PNG/512/add_circle_create_expand_new_plus_icon_123218.png" col="1" (tap)="add()">
+
     </GridLayout>
 
 
@@ -17,7 +17,7 @@
         </ng-template>
         <GridLayout *tkListItemSwipeTemplate columns="*, auto">
             <StackLayout id="delete-view" col="1" (tap)="delete($event)" class="delete-view">
-                <img src="../images/delete.png">
+                <img src="https://cdn.icon-icons.com/icons2/789/PNG/512/delete_icon-icons.com_65184.png">
             </StackLayout>
         </GridLayout>
 
