--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,9 +1,9 @@
-<ActionBar title="Groceries"></ActionBar>
+<ActionBar title="Tareas"></ActionBar>
 
 <GridLayout rows="auto, *">
 
     <GridLayout row="0" columns="*, auto" class="add-bar">
-        <TextField #groceryTextField [(ngModel)]="grocery" hint="Enter a grocery item" col="0"></TextField>
+        <TextField #groceryTextField [(ngModel)]="grocery" hint="Inserte un nuevo registro" col="0"></TextField>
         <img src="https://cdn.icon-icons.com/icons2/1993/PNG/512/add_circle_create_expand_new_plus_icon_123218.png" col="1" (tap)="add()">
 
     </GridLayout>
